refactor: rename expression for query
#0
